fix/classcastexceptions -fixes ClassCastException by only calling hooks, that support the flag value -moves out calling of hooks from OpenFeatureClient to dedicated class HookSupport -introduces method in Hok showing the supported flag value type -makes FlagEvaluationOptions immutable